refactor: remove TTS (Text-to-Speech) and voice-call extension
Remove the entire TTS feature including all providers (Edge TTS, OpenAI, ElevenLabs)
and the voice-call extension (Twilio, Telnyx, Plivo providers).

Core TTS module removed:
- src/tts/tts.ts, tts-core.ts, test files
- src/config/types.tts.ts
- TTS types from config exports
- TTS auto-mode from session types

Agent tools removed:
- src/agents/tools/tts-tool.ts
- TTS tool from openclaw-tools.ts

Command handlers removed:
- src/auto-reply/reply/commands-tts.ts
- TTS system prompt hint from commands-system-prompt.ts

Gateway API removed:
- src/gateway/server-methods/tts.ts

Plugin runtime changes:
- textToSpeechTelephony changed to stub type
- TTS removed from runtime exports

Status display changes:
- formatVoiceModeLine() changed to return null
- TTS functions removed from status.ts

Legacy migrations removed:
- TTS deprecation warning from legacy.rules.ts
- TTS enabled->auto migration from legacy.migrations.part-3.ts

Voice-call extension removed:
- extensions/voice-call/ entire directory (40+ files)
- src/plugins/voice-call.plugin.test.ts

Documentation removed:
- docs/tts.md, docs/zh-CN/tts.md
- docs/plugins/voice-call.md, docs/zh-CN/plugins/voice-call.md
- docs/cli/voicecall.md, docs/zh-CN/cli/voicecall.md

Test files updated:
- voice-call references changed to test-plugin in test files

Dependencies removed:
- node-edge-tts from package.json
- test:voicecall:closedloop script from package.json

Type definition removed:
- src/types/node-edge-tts.d.ts

--- a/package.json
+++ b/package.json
@@ -127,7 +127,6 @@
     "test:install:smoke": "bash scripts/test-install-sh-docker.sh",
     "test:live": "OPENCLAW_LIVE_TEST=1 CLAWDBOT_LIVE_TEST=1 vitest run --config vitest.live.config.ts",
     "test:macmini": "OPENCLAW_TEST_VM_FORKS=0 OPENCLAW_TEST_PROFILE=serial node scripts/test-parallel.mjs",
-    "test:voicecall:closedloop": "vitest run extensions/voice-call/src/manager.test.ts extensions/voice-call/src/media-stream.test.ts src/plugins/voice-call.plugin.test.ts --maxWorkers=1",
     "test:watch": "vitest",
     "tui": "node scripts/run-node.mjs tui",
     "tui:dev": "OPENCLAW_PROFILE=dev CLAWDBOT_PROFILE=dev node scripts/run-node.mjs --dev tui"
@@ -147,6 +146,7 @@
     "@whiskeysockets/baileys": "7.0.0-rc.9",
     "ajv": "^8.18.0",
     "chalk": "^5.6.2",
+    "chokidar": "^5.0.0",
     "cli-highlight": "^2.1.11",
     "commander": "^14.0.3",
     "croner": "^10.0.1",
@@ -159,7 +159,6 @@
     "jszip": "^3.10.1",
     "linkedom": "^0.18.12",
     "markdown-it": "^14.1.1",
-    "node-edge-tts": "^1.2.10",
     "osc-progress": "^0.3.0",
     "pdfjs-dist": "^5.4.624",
     "playwright-core": "1.58.2",
